--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,22 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
+.button {
+	display: flex;
+	justify-content: center;
+	gap: 1rem; 
+	margin-bottom: 20px;
+
+}
+.button button {
+	background-color: white;
+	border-radius: 60px;
+	height: 37px;
+	color:green;
+	border: 1px solid  #1D6154 ;
+	padding: 10px;
+	font-weight: bold;
+}
 ol, ul {
 	list-style: none;
 }
@@ -52,6 +68,7 @@ body {
 	margin:auto;
 	font-family: 'Work Sans' ;
 	font-size: 14px;
+	background-color: rgb(255, 255, 245);
 }
 header {
 	display: flex;
@@ -123,7 +140,7 @@ li:hover {
 }
 #portfolio h2 {
 	text-align: center;
-	margin-bottom: 1em;
+	
 }
 .gallery {
 	width: 100%;
@@ -186,3 +203,232 @@ footer nav ul {
 	margin: 2em
 }
 
+.log h2{
+	display: flex;
+	
+	justify-content: center;
+	top: 80px;
+	
+}
+.formm{
+	margin: auto;
+	margin-top: 100px;
+}
+.formm form{
+	display: flex;
+
+	flex-direction: column;
+	top: 150px;
+	gap: 1rem;
+	align-items: center;
+}
+.formm input{
+	border: none;
+    box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+    height: 60px;
+    width: 35%;
+}
+
+.formm label {
+	
+}
+.formm a{
+    
+    display: flex;
+    justify-content: center;
+    top: 200px;
+} 
+.formm button {
+	border-radius: 50px;
+    height: 50px;
+    width: 20%;
+    color: white;
+    background-color: green;
+}
+.button button.active {
+    background-color: green;
+    color: white;
+}
+.error-message {
+    color: red;
+    font-size: 0.875em;
+    display: none;
+    margin-top: -10px;
+    margin-bottom: 10px;
+} 
+.edition {
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    z-index: 9999; 
+}
+
+.edition i {
+    margin-right: 5px;
+}
+.modif {
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+	margin-bottom: 1rem;
+	gap: 1rem;
+    
+}
+
+.modif i {
+    margin-right: 5px; 
+}
+
+
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
+}
+
+/* Styles pour la galerie de la modale */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 60%;
+    text-align: center;
+	border-radius: 20px;
+    height: 600px;
+
+}
+
+#modalImages {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+    margin-top: 20px;
+	width: 40%;
+	margin:auto;	
+	margin-top: 40px;
+}
+
+#modalImages div {
+    position: relative;
+}
+
+#modalImages img {
+    width: 100%;
+    border: 2px solid transparent;
+}
+
+#modalImages .delete-icon {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background-color:black;
+	color: white;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.add-photo-btn {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    background-color: green;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    font-size: 1em;
+	width: 300px;
+    height: 50px;
+
+}
+.close {
+	display: flex;
+	font-size: 30px;
+	justify-content: flex-end;
+}
+.modal-content p {
+	font-family: 'Work Sans';
+	font-size: 35px;
+}
+.arrow-icon {
+   
+    top: 10px; 
+    left: 10px; 
+    font-size: 24px; 
+    color: #000; 
+    cursor: pointer; 
+}
+
+ .modal-content hr  {
+	
+		border: none;
+		border-top: 2px solid black; 
+		width: 40%; 
+		margin: 20px auto; 
+		padding-top: 20px;
+	
+	
+}
+.modal-content .fa-solid{
+	display: flex;
+	
+}
+.rec{
+    width: 520px;
+    height: 169px;
+    background: #E8F1F6;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    left: 350px;
+
+}
+.rec .fa-regular {
+	font-size: 50px;
+}
+.btn-grey{
+	display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    background-color: lightgrey;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    font-size: 1em;
+    width: 300px;
+    height: 50px;
+}
+.modal-content input {
+	height: 50px;
+    font-size: 1.2em;
+    border: none;
+    box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	display: flex;
+	flex-direction: column;
+}
+#addfile{
+	display: none;
+}
+#formmm{
+	display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
