--- a/assets/style.css
+++ b/assets/style.css
@@ -311,6 +311,7 @@ footer nav ul {
     text-align: center;
 	border-radius: 20px;
     height: 600px;
+	position: relative;
 
 }
 
@@ -364,22 +365,22 @@ footer nav ul {
 }
 .modal-content p {
 	font-family: 'Work Sans';
-	font-size: 35px;
+	font-size: 15px;
+	color: black;
 }
 .arrow-icon {
-   
-    top: 10px; 
-    left: 10px; 
-    font-size: 24px; 
-    color: #000; 
-    cursor: pointer; 
+    font-size: 20px;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    cursor: pointer;
 }
 
  .modal-content hr  {
 	
 		border: none;
 		border-top: 2px solid black; 
-		width: 40%; 
+		width: 70%; 
 		margin: 20px auto; 
 		padding-top: 20px;
 	
@@ -389,15 +390,15 @@ footer nav ul {
 	display: flex;
 	
 }
-.rec{
-    width: 520px;
-    height: 169px;
-    background: #E8F1F6;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    left: 350px;
-
+.rec {
+    text-align: center;
+    border: 1px solid #ddd;
+    
+    margin-bottom: 20px;
+    background-color: #E8F1F6;
+	height: 150px;
+	display: inline-block;
+	width: 60%;
 }
 .rec .fa-regular {
 	font-size: 50px;
@@ -412,11 +413,11 @@ footer nav ul {
     border-radius: 50px;
     cursor: pointer;
     font-size: 1em;
-    width: 300px;
-    height: 50px;
+    width: 200px;
+    height: 30px;
 }
 .modal-content input {
-	height: 50px;
+	height: 30px;
     font-size: 1.2em;
     border: none;
     box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
@@ -431,4 +432,51 @@ footer nav ul {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+}
+.modal-title {
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+.image-label {
+    display: block;
+    cursor: pointer;
+    color: #007bff;
+    text-align: center;
+}
+.image-label i {
+    font-size: 50px;
+    margin-bottom: 10px;
+	color: lightgrey;
+}
+.file-input {
+    display: none;
+}
+.input-label {
+    display: block;
+    margin: 10px 0 5px;
+}
+.input-field {
+    width:70%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+.submit-btn {
+    display: block;
+    width: 30%;
+    padding: 10px;
+    background-color:lightgrey;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+}
+.submit-btn:hover {
+    background-color: #45a049;
+}
+.itt {
+	display: none;
+	height: 100%;
 }
